2003-01-06  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (AC_OUTPUT): add gtetrient.desktop.

2003-01-06  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am: add intltool support.
	* configure.in: likewise.
	* gtetrinet.desktop.in: new, generated from gtetrinet.desktop.

	* ABOUT-NLS: upgraded to gettext 0.11.5.
	* config.rpath: likewise.

2003-01-06  Dani Carbonell  <bocata@panete.net>

	* src/dialogs.c (prefdialog_ok): new function.
	(prefdialog_new): use prefdialog_ok() to fix behaviour of Ok button.

2003-01-06  Jordi Mallach  <jordi@sindominio.net>

	* NEWS, configure.in: released gtetrinet 0.5.1.

2003-01-06  Jordi Mallach  <jordi@sindominio.net>

	* TODO: updated.
	* NEWS: document the C locale crash, for now.

2003-01-06  Dani Carbonell  <bocata@panete.net>

	* dialogs.c (prefdialog_themelist): don't select a theme if we can't
	find it in the current theme list.

2003-01-06  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: updated for 0.5.1.
	* README: update requirements.
	* TODO: updated.

	* src/dialogs.c (teamdialog_new): patch from Dani which converts
	input to UTF-8,

2003-01-06  Dani Carbonell  <bocata@panete.net>

	* src/dialogs.c (prefdialog_new): fixed the code that checks
	if the window is opened or not, now it should not crash, even if
	abused, also connected the "destroy" signal.
	(connectingdialog_new): likewise (this should stop the connecting
	crash).
	(connectdialog_new): likewise, and I changed the button order, so
	now it's HIG compliant (OK buttons in the lower right corner).
	(teamdialog_new): likewise, and connected the "destroy" signal.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* NEWS, configure.in: released gtetrinet 0.5.0.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: updated for 0.5.0.
	* TODO: updated.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* src/commands.c (toolbar): assign an icon to the detach button,
	and add useful tooltips to each button.
