@@ -1,3 +1,8 @@
+2003-01-07  Dani Carbonell  <bocata@panete.net>
+
+	* dialogs.c: rewrite the team change dialog, using gtk_window_new and
+	making it HIG compliant.
+
 2003-01-06  Jordi Mallach  <jordi@sindominio.net>
 
 	* configure.in (AC_OUTPUT): add gtetrient.desktop.
